--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "openpharmaUI-next",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "dependencies": {
-    "vue": "^3.0.4"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "vite": "^2.0.0-beta.13"
-  }
+	"name": "openpharmaUI-next",
+	"version": "0.1.0",
+	"scripts": {
+		"dev": "vite --config vite.dev.config.js",
+		"build": "vite build"
+	},
+	"dependencies": {
+		"vue": "^3.0.4"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^1.0.5",
+		"@vitejs/plugin-vue-jsx": "^1.0.2",
+		"@vue/compiler-sfc": "^3.0.4",
+		"eslint": "^7.17.0",
+		"vite": "^2.0.0-beta.13"
+	}
 }
