--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-	"name": "openpharmaUI-next",
+	"name": "openpharma WebUI next",
 	"version": "0.1.0",
+	"description": "openpharma WebUI",
+	"author": "GrayFawkes <gray.fawkes@outlook.com>",
 	"scripts": {
 		"dev": "vite --config vite.dev.config.js",
 		"build": "vite build"
 	},
 	"dependencies": {
-		"vue": "^3.0.4"
+		"axios": "^0.21.1",
+		"vue": "^3.0.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^1.0.5",
-		"@vitejs/plugin-vue-jsx": "^1.0.2",
-		"@vue/compiler-sfc": "^3.0.4",
-		"eslint": "^7.17.0",
-		"vite": "^2.0.0-beta.13"
+		"@vitejs/plugin-vue": "^1.0.6",
+		"@vue/compiler-sfc": "^3.0.5",
+		"eslint": "^7.18.0",
+		"eslint-plugin-vue": "^7.4.1",
+		"vite": "^2.0.0-beta.30"
 	}
 }
