--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@intlify/vite-plugin-vue-i18n": "^1.0.0-beta.12",
+		"@rollup/plugin-dynamic-import-vars": "^1.1.1",
 		"@vitejs/plugin-vue": "^1.1.2",
 		"@vue/compiler-sfc": "^3.0.5",
 		"eslint": "^7.18.0",
