--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"description": "openpharma WebUI",
 	"author": "GrayFawkes <gray.fawkes@outlook.com>",
 	"scripts": {
-		"dev": "vite --config vite.dev.config.js",
+		"dev": "vite --config vite.dev.config.js --debug log.txt",
 		"build": "vite build"
 	},
 	"dependencies": {
+		"@bundled-es-modules/axios": "^0.21.1",
 		"axios": "^0.21.1",
 		"bootstrap": "^5.0.0-beta1",
 		"vue": "^3.0.5",
