--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "openpharma WebUI next",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"description": "openpharma WebUI",
 	"author": "GrayFawkes <gray.fawkes@outlook.com>",
 	"scripts": {
@@ -10,18 +10,18 @@
 	"dependencies": {
 		"@bundled-es-modules/axios": "^0.21.1",
 		"axios": "^0.21.1",
-		"bootstrap": "^5.0.0-beta1",
+		"bootstrap": "^5.0.0-beta2",
 		"vue": "^3.0.5",
-		"vue-i18n": "^9.0.0-rc.4",
+		"vue-i18n": "^9.0.0-rc.7",
 		"vue-router": "^4.0.3"
 	},
 	"devDependencies": {
-		"@intlify/vite-plugin-vue-i18n": "^1.0.0-beta.12",
+		"@intlify/vite-plugin-vue-i18n": "^2.0.0-rc.1",
 		"@rollup/plugin-dynamic-import-vars": "^1.1.1",
-		"@vitejs/plugin-vue": "^1.1.2",
+		"@vitejs/plugin-vue": "^1.1.4",
 		"@vue/compiler-sfc": "^3.0.5",
 		"eslint": "^7.18.0",
 		"eslint-plugin-vue": "^7.4.1",
-		"vite": "^2.0.0-beta.60"
+		"vite": "^2.0.1"
 	}
 }
