--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "openpharma WebUI next",
+	"name": "openpharmaWebUI-next",
 	"version": "0.2.2",
 	"description": "openpharma WebUI",
 	"author": "GrayFawkes <gray.fawkes@outlook.com>",
@@ -11,9 +11,10 @@
 		"@bundled-es-modules/axios": "^0.21.1",
 		"axios": "^0.21.1",
 		"bootstrap": "^5.0.0-beta2",
+		"bootstrap-icons": "^1.4.0",
 		"vue": "^3.0.5",
-		"vue-i18n": "^9.0.0-rc.7",
-		"vue-router": "^4.0.3"
+		"vue-i18n": "^9.0.0",
+		"vue-router": "^4.0.4"
 	},
 	"devDependencies": {
 		"@intlify/vite-plugin-vue-i18n": "^2.0.0-rc.1",
@@ -22,6 +23,6 @@
 		"@vue/compiler-sfc": "^3.0.5",
 		"eslint": "^7.18.0",
 		"eslint-plugin-vue": "^7.4.1",
-		"vite": "^2.0.1"
+		"vite": "^2.0.2"
 	}
 }
