--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
-		"bootstrap": "^5.0.0",
-		"bootstrap-icons": "^1.4.1",
+		"bootstrap": "^5.0.1",
+		"bootstrap-icons": "^1.5.0",
+		"chart.js": "^3.2.1",
+		"node": "^16.1.0",
 		"vue": "^3.0.11",
 		"vue-i18n": "^9.1.6",
-		"vue-router": "^4.0.6"
+		"vue-router": "^4.0.8"
 	},
 	"devDependencies": {
 		"@intlify/vite-plugin-vue-i18n": "^2.1.2",
 		"@rollup/plugin-dynamic-import-vars": "^1.1.1",
 		"@vitejs/plugin-vue": "^1.2.2",
 		"@vue/compiler-sfc": "^3.0.11",
-		"eslint": "^7.25.0",
+		"eslint": "^7.27.0",
 		"eslint-plugin-vue": "^7.9.0",
-		"vite": "^2.2.4"
+		"vite": "^2.3.3"
 	}
 }
