--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "openpharmaWebUI-next",
-	"version": "0.2.3",
+	"name": "openpharmaUI",
+	"version": "0.2.4",
 	"description": "openpharma WebUI",
 	"author": "GrayFawkes <gray.fawkes@outlook.com>",
 	"scripts": {
@@ -12,19 +12,19 @@
 		"axios": "^0.21.1",
 		"bootstrap": "^5.0.1",
 		"bootstrap-icons": "^1.5.0",
-		"chart.js": "^3.3.0",
+		"chart.js": "^3.3.2",
 		"node": "^16.1.0",
-		"vue": "^3.0.11",
+		"vue": "^3.1.1",
 		"vue-i18n": "^9.1.6",
 		"vue-router": "^4.0.8"
 	},
 	"devDependencies": {
-		"@intlify/vite-plugin-vue-i18n": "^2.1.2",
+		"@intlify/vite-plugin-vue-i18n": "^2.2.1",
 		"@rollup/plugin-dynamic-import-vars": "^1.1.1",
-		"@vitejs/plugin-vue": "^1.2.2",
-		"@vue/compiler-sfc": "^3.0.11",
+		"@vitejs/plugin-vue": "^1.2.3",
+		"@vue/compiler-sfc": "^3.1.1",
 		"eslint": "^7.28.0",
-		"eslint-plugin-vue": "^7.9.0",
-		"vite": "^2.3.3"
+		"eslint-plugin-vue": "^7.10.0",
+		"vite": "^2.3.7"
 	}
 }
